# CAI-CryptoPredictiveAI

./: .gitignore  .mise.toml  .pre-commit-config.yaml  Cargo.toml  Makefile  README.md  kubeconfig  pyproject.toml
.devcontainer/: devcontainer.json  postCreateCommand.sh
deployments/dev/backfill-technical-indicators/: backfill-technical-indicators-cm.yaml  backfill-technical-indicators-d.yaml  backfill-technical-indicators-j.yaml  candles-historical-j.yaml  kustomization.yaml  technical-indicators-historical-d.yaml  technical-indicators-historical-j.yaml  trades-historical-d.yaml
deployments/dev/backfill-technical-indicators/before_kustomization/: technical-indicators-historical-d.yaml
deployments/dev/candles/: candles-d.yaml
deployments/dev/kind/: create_cluster.sh  install_mlflow.sh  kind-with-portmapping.yaml
deployments/dev/kind/manifests/: grafana-values.yaml  mlflow-minio-secret.yaml
deployments/dev/news/: kustomization.yaml  news-cm.yaml  news-d.yaml
deployments/dev/news-sentiment/: kustomization.yaml  news-sentiment-cm.yaml  news-sentiment-d.yaml
deployments/dev/prediction-api/: kustomization.yaml  prediction-api-d.yaml  prediction-api-s.yaml
deployments/dev/prediction-generator/: prediction-generator-cm.yaml  prediction-generator-d.yaml
deployments/dev/technical-indicators/: technical-indicators-d.yaml
deployments/dev/trades/: trades-d.yaml
deployments/dev/training-pipeline/: kustomization.yaml  training-pipeline-cm.yaml  training-pipeline-j.yaml
deployments/prod/: rwml-ia.yaml
deployments/prod/agnhost/: ks.yaml
deployments/prod/agnhost/app/: agnhost-d.yaml  rwml-ir.yaml
deployments/prod/backfill-technical-indicators/: backfill-technical-indicators-j.yaml
deployments/prod/candles/: candles-d.yaml  candles.yaml
deployments/prod/manifests/: grafana-values.yaml  kafka-ui-all-in-one.yaml  mlflow-values.yaml
deployments/prod/prediction-generator/: kustomization.yaml  prediction-generator-cm.yaml  prediction-generator-j.yaml
deployments/prod/technical-indicators/: technical-indicators-d.yaml
deployments/prod/trades/: trades-d.yaml
deployments/prod/training-pipeline/: kustomization.yaml  training-pipeline-cj.yaml  training-pipeline-cm.yaml  training-pipeline-j.yaml
docker/: candles.Dockerfile  news-sentiment.Dockerfile  news.Dockerfile  prediction-generator.Dockerfile  technical-indicators.Dockerfile  technical_indicators.Dockerfile  trades.Dockerfile  training-pipeline.Dockerfile
lessons/: 00_how_to_setup_your_development_environment.md  00_tooling.md  my_notes.md  session_1.md
scripts/: build-and-push-image.sh  deploy.sh
services/candles/: pyproject.toml  settings.env
services/candles/src/candles/: main.py
services/news/: pyproject.toml
services/news_sentiment/: Makefile  README.md  pyproject.toml  query.sql
services/news_sentiment/data/: README.md
services/news_sentiment/src/news_sentiment/: config.py  dataset.py  main.py  sentiment_extractor.py
services/news_sentiment/src/news_sentiment/baml_client/: __init__.py  async_client.py  config.py  globals.py  inlinedbaml.py  parser.py  runtime.py  stream_types.py  sync_client.py  tracing.py  type_builder.py  type_map.py  types.py
services/news_sentiment/src/news_sentiment/baml_src/: clients.baml  generators.baml  sentiment_scores.baml
services/prediction-api/: Makefile
services/prediction-api/src/: main.rs
services/predictor/: .dockerignore  eda_report.html  pyproject.toml  query.sql
services/predictor/src/predictor/: config.py  data_validation.py  model_registry.py  models.py  predict.py  train.py
services/technical_indicators/: pyproject.toml
services/trades/: pyproject.toml  settings.env
services/trades/src/trades/: config.py  kraken_api.py  kraken_rest_api.py  main.py
