[project]
name = "crypto-predictor-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "candles",
    "news",
    "news-sentiment",
    "predictor",
    "technical-indicators",
    "trades",
]


[tool.setuptools]
packages = [
    "services.trades",
    "services.candles",
    "services.technical_indicators",
    "services.predictor",
    "services.news",
    "services.news_sentiment"
]

[tool.uv.workspace]
members = [
    "services/trades",
    "services/candles",
    "services/technical_indicators", 
    "services/predictor",
    "services/news",
    "services/news_sentiment"
]

[tool.uv.sources]
risingwave-py = { git = "https://github.com/risingwavelabs/risingwave-py" }
candles = { workspace = true }
trades = { workspace = true }
technical-indicators = { workspace = true }
predictor = { workspace = true }
news-sentiment = { workspace = true }
news = { workspace = true }

[tool.ruff]
line-length = 88
lint.select = [
    "C",  # mccabe rules
    "F",  # pyflakes rules
    "E",  # pycodestyle error rules
    "W",  # pycodestyle warning rules
    "B",  # flake8-bugbear rules
    "I",  # isort rules
]
lint.ignore = [
    "C901",  # max-complexity-10
    "E501",  # line-too-long
]

[tool.ruff.format]
indent-style = "space"
quote-style = "single"
