[project]
name = "news-sentiment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "brunoclbr", email = "bruno.copa@rwth-aachen.de" }
]
requires-python = ">=3.12"
dependencies = [
    "baml-py>=0.89.0",
    "opik>=1.8.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
