[project]
name = "technical_indicators"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "brunoclbr", email = "bruno.copa@rwth-aachen.de" }
]
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "quixstreams>=3.13.1"
]

[project.optional-dependencies]
talib = [
    "ta-lib>=0.6.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
