[project]
name = "technical_indicators"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "brunoclbr", email = "bruno.copa@rwth-aachen.de" }
]
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "numpy>=1.26.4",
    "quixstreams>=3.13.1",
    "ta-lib>=0.6.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
