[project]
name = "trades"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "bruno_clbr", email = "bruno.copa.97@gmail.com" } 
]
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "quixstreams>=3.13.1",
    "requests>=2.32.3",
    "websocket-client>=1.8.0",
    "pydantic>=2.10.6",
    "websocket>=0.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
